파일 확장자 차단 기능 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.application.name=flow
+spring.datasource.url=jdbc:postgresql://localhost:5432/flow?currentSchema=public
+spring.datasource.username=ohjihwan
+spring.datasource.password=Ohjihwan12@
+spring.session.store-type=none
+mybatis.mapper-locations=classpath:/mappers/*.xml
+mybatis.type-aliases-package=com.flow.flow.dto
+
