--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/flow?currentSchema=public
-spring.datasource.username=ohjihwan
-spring.datasource.password=Ohjihwan12@
+spring.datasource.url=jdbc:postgresql://db:5432/flowdb
+spring.datasource.username=flow
+spring.datasource.password=flow123
 spring.session.store-type=none
 mybatis.mapper-locations=classpath:/mappers/*.xml
 mybatis.type-aliases-package=com.flow.flow.dto
-
+server.address=0.0.0.0
+server.port=8080
